<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitFoood</string>
    <string name="title_menu_1">Know Your Weight Category</string>
    <string name="title_menu_2">Food and Exercise Recommendations</string>
    <string name="title_menu_3">Reminder Notification</string>
    <string name="desc_menu_1">Weight categories can be found using a BMI calculator</string>
    <string name="desc_menu_2">Get food and exercise recommendations based on your weight, height, and age.</string>
    <string name="desc_menu_3">Stay motivated with reminders to eat healthy and exercise.</string>
    <string name="explore">Explore</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">A place to share the excitement among Dicoding users</string>
    <string name="title_welcome_page">Welcome to dicoStory!</string>
    <string name="title_signup_page">Welcome 👋</string>
    <string name="title_form_page">Enter your data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Log in to your account to continue</string>
    <string name="massage_signup_page">Please enter your data</string>
    <string name="gender">Gender</string>
    <string name="gender_man">Male</string>
    <string name="gender_girl">Female</string>
    <string name="birth_date">Date of Birth</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="title_login_page">Welcome back 👋</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning at Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="have_account">Already have an account?</string>


    <string name="isi_manual">Manual Input</string>

    <string name="beranda">Home</string>
    <string name="analisa">Analysis</string>
    <string name="profile">Profile</string>
    <string name="title_activity_buttom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="guest_name">Hi, Lucy!</string>
    <string name="guest_welcome">Welcome to FitFood</string>
    <string name="bmi_card">Ideal Body Weight</string>
    <string name="bmi_desc">Make sure your calorie intake matches your daily calorie needs.</string>
    <string name="recomend_for_you">Recommendations for you</string>

    <string name="dummy_artikel_headline">Healthy Lifestyle to Maintain Ideal Body Weight</string>
    <string name="home_artikel">Articles</string>
    <string name="home_see_all">See more</string>

    <string name="dummy_food_headline">Grilled Chicken</string>
    <string name="dummy_kcal">239 kcal</string>
    <string name="dummy_gr">100 gr</string>
    <string name="cek_rekomendasi">Check Recommendations</string>
    <string name="add_food">Add Food</string>
    <string name="dummy_total_kcal">Total Calories: 317 cal</string>
    <string name="food_not_recommended">Not Recommended</string>
    <string name="empty_food">No food found.</string>
    <string name="descEmptyFood">Sorry, no results for this search. Please try another or add manually.</string>
    <string name="food_name_form">Food Name</string>
    <string name="calories_number_form">Calories Amount</string>
    <string name="btn_add">Add</string>

    <string name="bmi_head">Ideal Weight</string>
    <string name="wo_desc">To maintain an ideal weight, a combination of cardio and strength training is key. Here are some options.</string>
    <string name="wo_recomendation_text">Your Best Workout Recommendations</string>
    <string name="dummy_wo_name">Jogging</string>
    <string name="dummy_food_name">Spinach</string>
    <string name="dummy_food_calories">216 kcal</string>
    <string name="food_desc">To maintain an ideal weight, you need to consume nutrient-rich and low-calorie foods. Here are some recommended types of food.</string>
    <string name="food_recomendation_text">Your Best Food Recommendations</string>

    <string name="bb_awal_text">50 kg</string>
    <string name="bb_awal_desc">Initial Weight</string>
    <string name="bb_sekarang_text">50 kg</string>
    <string name="bb_sekarang_desc">Current Weight</string>
    <string name="bb_sasaran_text">50 kg</string>


    <string name="title_artikel">Pola Hidup Sehat Untuk Menjaga Berat Badan Ideal</string>
    <string name="desc_artikel">Morem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia.</string>
    <string name="title_artikel_page">Sedang Trending</string>


    <string name="berat_sasaran_title">Masukan Berat Sasaran</string>
    <string name="text_bb_sasaran">50 Kg</string>
    <string name="berat_awal_title">Masukan Berat Awal</string>
    <string name="text_bb_awal">50 Kg</string>
    <string name="ups">Ups!</string>
    <string name="desc_ups">Anda harus menambahkan makanan secara manual</string>
    <string name="desc_logout">Apakah kamu yakin ingin log out?</string>
    <string name="dummy_notif_headline">Makan Siang!</string>
    <string name="dummy_desc_notif">"Lorem ipsum dolor sit amet consectetur. "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_detail_desc_notif">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.</string>
    <string name="account">Account</string>
    <string name="dumb_name">Rayhan Wahyu</string>
    <string name="dumbEmail">rayhanwahyu@gmail.com</string>
    <string name="age">Age</string>
    <string name="dummy_age">21</string>
    <string name="edit">Edit</string>
    <string name="eat_reminder">Meal Reminder</string>
    <string name="reminder">Reminder</string>
    <string name="language">Language</string>
    <string name="weight_scale_reminder">Weight Reminder</string>
    <string name="breakfast">Breakfast</string>
    <string name="breakfast_time">07:45</string>
    <string name="lunch">Lunch</string>
    <string name="lunch_time">12:30</string>
    <string name="set">Set</string>
    <string name="dinner">Dinner</string>
    <string name="dinner_time">07:00</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="bb_sasaran_desc">Target Weight</string>
    <string name="tambah_berat">Add Weight</string>

    <string name="Oke" translatable="false">Oke</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="message_forgot_password">Please write your email to receive a confirmation code to set a new password.</string>
    <string name="confirm_mail">Confirm Mail</string>
    <string name="title_verifiy_email">Verify Email Address</string>
    <string name="message_verify_email">Verification code sent to</string>
    <string name="dummy_email">rayhanwahyu@gmail.com</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="resend">Resend Confirmation Code</string>
    <string name="title_new_pass">New Password</string>
    <string name="message_new_pass">Please write your new password.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_in_with">- Or sign in with -</string>
    <string name="or_sign_up_with">- Or sign up with -</string>
    <string name="profile_name">"Lucyta Qutsyaning "</string>
    <string name="account_setting">Account Setting</string>
    <string name="account_edit">Edit Account</string>
    <string name="submit">Submit</string>
    <string name="food">Food</string>
    <string name="workout">Workout</string>
    <string name="food_list">Food List</string>
    <string name="food_recommendation">Food Recommendation</string>
    <string name="search_food">Search Food</string>
    <string name="food_name">Food Name</string>
    <string name="number_of_calories">Number of Calories</string>
    <string name="desc_no_prediction">Model tidak dapat memprediksi makanan dari gambar. \nSilahkan input secara manual.</string>
    <string name="total_calories">Total Calories</string>
    <string name="recommendation_result">Recommencation Results</string>
    <string name="dummy_bmi">BMI 21</string>
    <string name="desc_bmi">You are overweight</string>
    <string name="tb_sekarang_desc">Current Height</string>
    <string name="tb_sekarang_text">150 cm</string>
    <string name="berat_sekarang_title">Enter the current weight</string>
    <string name="tb_sekarang_title">Enter the current height</string>
    <string name="bb_sekarang_title">Enter the current weight</string>


    <string name="message_input_bmi">Enter your height and weight to calculate your BMI</string>
    <string name="message_input_height">Enter your height in cm</string>
    <string name="message_input_weight">Enter your weight in kg</string>
    <string name="input_bmi">Input Your Height and Weight</string>

</resources>

