<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="230dp"
    app:cardElevation="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logout_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logout"
            style="@style/SubHeading1_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/logout_img"
            app:layout_constraintStart_toStartOf="@+id/logout_img"
            app:layout_constraintTop_toBottomOf="@+id/logout_img" />

        <TextView
            android:id="@+id/desc_logout"
            style="@style/Body1_Regular"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/desc_logout"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/logout"
            app:layout_constraintStart_toStartOf="@id/logout"
            app:layout_constraintTop_toBottomOf="@id/logout" />

        <Button
            android:id="@+id/btn_yes"
            style="@style/Body1_Bold"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/navi"
            android:text="@string/yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_logout" />

        <Button
            android:id="@+id/btn_no"
            style="@style/Body1_Bold"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/grey_200"
            android:text="@string/no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_logout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>