<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ups_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_ups"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ups"
            style="@style/SubHeading1_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ups"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/ups_img"
            app:layout_constraintStart_toStartOf="@+id/ups_img"
            app:layout_constraintTop_toBottomOf="@+id/ups_img" />

        <TextView
            android:id="@+id/desc_ups"
            style="@style/Body1_Regular"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_no_prediction"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tv_ups"
            app:layout_constraintStart_toStartOf="@id/tv_ups"
            app:layout_constraintTop_toBottomOf="@id/tv_ups" />

        <Button
            android:id="@+id/btnOK"
            style="@style/Body1_Bold"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/navi"
            android:text="@string/Oke"
            app:layout_constraintEnd_toEndOf="@+id/desc_ups"
            app:layout_constraintStart_toStartOf="@+id/desc_ups"
            app:layout_constraintTop_toBottomOf="@+id/desc_ups" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>